==> dannyf00/My-MCU-Libraries---2nd-try/PIC10_12_16_18/uart0isr_sw.c <==
#include "uart0isr_sw.h"						//we use software uart / interrupt driven, timer2 as timebase, tx only
#define UART_PORT			PORTA
#define UART_DDR			TRISA
#define UART_TX				(1<<0)			//TX/DO on PA.0
#define F_UART				(F_CPU)		//uart clock speed
#define RBIT(ch)			((r4_lut[(ch) & 0x0f] << 4) | r4_lut[(ch) >> 4])	//consider the use of RBIT() for Cortex-M4 chips

void uart0_init(uint32_t bps) {
	_UxTX_BUSY = 0;							//0->not busy, 1->busy
	_UxTXphase = 0;							//1->sending the first byte, 0->sending the 2nd byte

	//configure uart pins
	IO_SET(UART_PORT, UART_TX);				//TX idles high
	IO_OUT(UART_DDR, UART_TX);				//as output

	//configure timer2: top at PR2
	//stop timer2
	//TMR0ON = 0;								//0->stop the timer, !0->start the timer
	TMR0 = 0;								//reset the counter

	//clear TIFR/TIMSK
	TMR0IF = 0;								//1->clera the flag
	TMR0IE = 0;								//1->enable the interrupt, 0->disable the interrupt
	//PEIE = 1;								//enable peripehral interrupt
	T0CS = 0;								//0->count on internal clock, 1->external clock
	
	//configure prescaler and start time0
	//prescaler formed by prescaler (1..256)
	if (F_UART <= bps * 256 * 1) {
		//run at 1:1 prescaler
		_UxTXPR/*PR2*/ = F_UART / bps / 1 - 1;			//set the top
		PSA=1;									//T1CONbits.T1CKPS = 0;				//0b00->prescaler = 1:1
		//T2CONbits.TOUTPS = 1-1;				//postscaler = 1:1
	} else if (F_UART <= bps * 256 * 2) {
		//run at 2:1 prescaler
		_UxTXPR/*PR2*/ = F_UART / bps / 2 - 1;		//set the top
		PSA=0, PS2=0, PS1=0, PS0=0;			//PS2..0=0b000->2:1prescaler
		//T2CONbits.T2CKPS = 1;				//0b01->prescaler = 4:1
		//T2CONbits.TOUTPS = 2 - 1;			//postscaler = 2:1
	} else if (F_UART <= bps * 256 * 4) {
		//run timer0 at 4:1 prescaler
		_UxTXPR/*PR2*/ = F_UART / bps / 4 - 1;		//set the top
		PSA=0, PS2=0, PS1=0, PS0=1;			//PS2..0=0b001->4:1prescaler
		//T2CONbits.T2CKPS = 2;				//0b10->prescaler = 16:1
		//T2CONbits.TOUTPS = 4-1;				//postscaler = 4:1
	} else if (F_UART <= bps * 256 * 8) {
		//run timer0 at 8:1 prescaler
		_UxTXPR/*PR2*/ = F_UART / bps / 8 - 1;		//set the top
		PSA=0, PS2=0, PS1=1, PS0=0;			//PS2..0=0b010->8:1prescaler
		//T2CONbits.T2CKPS = 2;				//0b10->prescaler = 16:1
		//T2CONbits.TOUTPS = 4-1;				//postscaler = 4:1
	} else if (F_UART <= bps * 256 * 16) {
		//run timer0 at 16:1 prescaler
		_UxTXPR/*PR2*/ = F_UART / bps / 16 - 1;		//set the top
		PSA=0, PS2=0, PS1=1, PS0=1;			//PS2..0=0b011->16:1prescaler
		//T2CONbits.T2CKPS = 2;				//0b10->prescaler = 16:1
		//T2CONbits.TOUTPS = 4-1;				//postscaler = 4:1
	} else if (F_UART <= bps * 256 * 32) {
		//run timer0 at 32:1 prescaler
		_UxTXPR/*PR2*/ = F_UART / bps / 32 - 1;		//set the top
		PSA=0, PS2=1, PS1=0, PS0=0;			//PS2..0=0b100->32:1prescaler
		//T2CONbits.T2CKPS = 2;				//0b10->prescaler = 16:1
		//T2CONbits.TOUTPS = 4-1;				//postscaler = 4:1
	} else if (F_UART <= bps * 256 * 64) {
		//run timer0 at 64:1 prescaler
		_UxTXPR/*PR2*/ = F_UART / bps / 64 - 1;		//set the top
		PSA=0, PS2=1, PS1=0, PS0=1;			//PS2..0=0b101->64:1prescaler
		//T2CONbits.T2CKPS = 2;				//0b10->prescaler = 16:1
		//T2CONbits.TOUTPS = 4-1;				//postscaler = 4:1
	} else if (F_UART <= bps * 256 * 128) {
		//run timer0 at 4:1 prescaler
		_UxTXPR/*PR2*/ = F_UART / bps / 128 - 1;		//set the top
		PSA=0, PS2=1, PS1=1, PS0=0;			//PS2..0=0b110->128:1prescaler
		//T2CONbits.T2CKPS = 2;				//0b10->prescaler = 16:1
		//T2CONbits.TOUTPS = 4-1;				//postscaler = 4:1
	} else {		
		//run timer2 at 256:1 prescaler
		_UxTXPR/*PR2*/ = F_UART / bps / 256 - 1;		//set the top
		PSA=0, PS2=1, PS1=1, PS0=1;			//PS2..0=0b111->256:1prescaler
		//T2CONbits.T2CKPS = 2;				//0b10->prescaler = 16:1
		//T2CONbits.TOUTPS = 16-1;			//postscaler = 16:1
	}	
	//TMR0ON = 1;								//enable TMR2
	//timer2 running now
	//overflow interrupt remains disabled
}

void uart0_puts(char *str) {
	char ch;
	while (uart0_busy()) continue;			//wait for the uart to be ready
	_UxTX_BUSY = 1;							//uart is busy
	//IO_SET(UART_PORT, UART_TX);			//TX high
	//reverse the input byte's order: LSB..MSB
	_UxTXphase = 1;							//to send the 1st byte
	//inverse the order of data byte
	_UxTX_ptr = str;						//save the string
	ch = *_UxTX_ptr++;						//save the char and advance the string pointer
	_UxTXDR = RBIT(ch);						//(r4_lut[ch & 0x0f] << 4) | r4_lut[ch >> 4];
	//_UxTXSR = (_UxTXDR << 7) | 0x7f;		//prepare for the next byte
	_UxTXmask = 1<<7;						//transmission mask
	TMR0 =-_UxTXPR;							//reset the timer/prescaler
	//clear TIFR/TIMSK
	TMR0IF = 0;								//1->clera the flag
	TMR0IE = 1;								//1->enable the interrupt, 0->disable the interrupt
	IO_CLR(UART_PORT, UART_TX);				//send the start bit -> low
}
